first task interactive

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <link rel="stylesheet" href="./index.css">
   <title>Document</title>
 </head>
-<body>
+<body class="body">
+  <form class="form" name="form">
+    <input class ='input firstString'type="text" placeholder="Введите фразу 1" name="firstString">
+    <input class ='input secondString'type="text" placeholder="Введите фразу 2" name="secondString">
+    <input class ='input symbol'type="text" placeholder="Введите букву" name="symbol">
+    <a href="" class="button">Нажми на меня</a>
+  </form>
   <script src="./index.js"></script>
 </body>
 </html>
